[package]
name = "boytacean"
description = "A Game Boy emulator that is written in Rust."
version = "0.6.8"
authors = ["João Magalhães <joamag@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/joamag/boytacean"
keywords = ["gameboy", "emulator", "rust"]
edition = "2018"
exclude = ["/frontends", "/res/roms", "/res/screens", "/res/videos"]
build = "build.rs"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
wasm = ["wasm-bindgen"]
debug = []

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }

[build-dependencies]
chrono = "0.4"
regex = "1"

[profile.release]
debug = false
lto = true
opt-level = 3

[workspace]
members = [
    ".",
    "frontends/sdl",
]
