[package]
name = "boytacean-encoding"
description = "Codecs library for Boytacen."
version = "0.11.5"
authors = ["João Magalhães <joamag@gmail.com>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.82"

[features]
simd = ["boytacean-hashing/simd"]

[dependencies]
boytacean-common = { path = "../common", version = "0.11.5" }
boytacean-hashing = { path = "../hashing", version = "0.11.5" }

[[bin]]
name = "zippy"
path = "src/cli/zippy.rs"
