[package]
name = "boytacean-hashing"
description = "Hashing library for Boytacen."
version = "0.11.2"
authors = ["João Magalhães <joamag@gmail.com>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.81"

[features]
simd = []

[dependencies]
boytacean-common = { path = "../common", version = "0.11.2" }
