[package]
name = "boytacean-hashing"
description = "Hashing library for Boytacen."
version = "0.12.1"
authors = ["João Magalhães <joamag@gmail.com>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.86.0"

[features]
simd = []

[dependencies]
boytacean-common = { path = "../common", version = "0.12.1" }
