[package]
name = "boytacean-sdl"
version = "0.8.0"
authors = ["João Magalhães <joamag@gmail.com>"]
description = "An SDL frontend for Boytacen"
license = "Apache-2.0"
keywords = ["gameboy", "emulator", "rust", "sdl"]
edition = "2018"

[features]
slow = []
debug = ["boytacean/debug"]
pedantic = ["boytacean/pedantic"]
cpulog = ["boytacean/cpulog"]

[dependencies.boytacean]
path = "../.."

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.image]
version = "0.24"

[dependencies.chrono]
version = "0.4"

[dependencies.sdl2]
version = "0.35"
features = ["ttf", "image", "gfx", "mixer", "static-link", "use-vcpkg"]

# If the vcpkg version of SDL2 does not work (eg: display not found error)
# then try dynamic linking SDL2 using the following features
# features = ["ttf", "image", "gfx", "mixer", "bundled"]

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-image[libjpeg-turbo,tiff,libwebp]", "sdl2-ttf", "sdl2-gfx", "sdl2-mixer"]
git = "https://github.com/microsoft/vcpkg"
rev = "261c458af6e3eed5d099144aff95d2b5035f656b"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
