[package]
name = "boytacean-sdl"
version = "0.10.7"
authors = ["João Magalhães <joamag@gmail.com>"]
description = "An SDL frontend for Boytacen"
license = "Apache-2.0"
keywords = ["gameboy", "emulator", "rust", "sdl"]
edition = "2018"
readme = "README.md"

[features]
slow = []
debug = ["boytacean/debug"]
pedantic = ["boytacean/pedantic"]
cpulog = ["boytacean/cpulog"]

[dependencies]
boytacean = { path = "../..", version = "0.10.7" }
boytacean-common = { path = "../../crates/common", version = "0.10.7" }
clap = { version = "4", features = ["derive"] }
image = "0.24"
chrono = "0.4"

[dependencies.sdl2]
version = "0.36"
git = "https://github.com/Rust-SDL2/rust-sdl2"
rev = "2ab81ae1d9e8b4455fea7f25640f26a21dea6ea2"
features = ["ttf", "image", "gfx", "mixer", "static-link", "use-vcpkg"]

# For MacOS running under arm64 architecture there may be linking issues
# if that's the case try to lock the SDL2 version to the following Git revision
# git = "https://github.com/Rust-SDL2/rust-sdl2"
# rev = "2ab81ae1d9e8b4455fea7f25640f26a21dea6ea2"

# If the vcpkg version of SDL2 does not work (eg: display not found error)
# then try dynamic linking SDL2 using the following features
# features = ["ttf", "image", "gfx", "mixer", "bundled"]

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-image[libjpeg-turbo,tiff,libwebp]", "sdl2-ttf", "sdl2-gfx", "sdl2-mixer"]
git = "https://github.com/microsoft/vcpkg"
rev = "2023.11.20"

# If you face issues with the SDL2 libraries linking process
# try to use the following revision instead
# rev = "2022.10.19"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
